Added manual per-TN threshold overrides

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,5 @@
 {
     "awl_path": "./config/awl.json",
-    "mwl_path": "./config/mwl.json"
+    "mwl_path": "./config/mwl.json",
+    "ovr_path": "./config/ovr.json"
 }
